--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello World!</title>
 </head>
 <body>
-<h1>HELLO HTML!</h1>
+<h1>HELLO HTML! Seems like a nice course</h1>
 </body>
 </html>
