completed completed completed

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
-            <span id="company-name" text-left> Food, LLC </span>
+            <span id="company-name" class="text-left"> Food, LLC </span>
           </a>
         
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-button" aria-expanded="false">
